# python-api-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GUIDE.md  LICENSE  README.md  alembic.ini  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
application/: application.py  params.py
db/: queries.py
db/migrations/: README.md
db/migrations/functions/: 20240619_01_utility_functions.sql  20240619_02_business_functions.sql
db/migrations/schema/: 20240619_01_types.sql  20240619_02_tables.sql
db/migrations/versions/: README.md  env.py
db/queries/: example_query.sql
docs/: ai_integration.md  architecture.md  getting_started.md
docs/archives/: README.md
helpers/: common_helpers.py
pydantic_schemas/: base_schemas.py
routes/: __init__.py  example_routes.py
scripts/db/: setup.py
services/: http_client.py
tests/: conftest.py  test_example.py
utils/: database.py  logging.py
